# multi-agent-office-platform

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
agent/adapters/: __init__.py  mcp_adapters.py
agent/agents/: __init__.py  agent_builder.py  domain.py  reviewer.py  skill_defs.py  supervisor.py
agent/core/: __init__.py  agent_router.py  app_context.py  approval_flow.py  async_utils.py  audit.py  capability_card.py  circuit_breaker.py  config.py  context_manager.py  data_analysis.py  distributed_lock.py  event_bus.py  feedback.py  human_confirm.py  i18n.py  sla.py  (+24 more)
api/: errors.py  main.py
deploy/: __init__.py  canary.py  ha_manager.py  multi_region.py
docs/: 企业级多Agent办公平台_技术架构文档_v2.md  企业级多智能体办公平台对比分析报告.md  第一版技术文档.md  集成智能文档助手方案.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gateway/: __init__.py  load_balancer.py  protocol_converter.py  rate_limiter.py  session_router.py
instance/: .encryption_key
mcp_servers/: __init__.py  base.py  registry.py
observability/: business_analytics.py  logging_config.py  metrics.py  tracing.py
scripts/: deploy.sh  health_check.sh  setup.sh  start.sh  start_mcp_mock.sh
security/: __init__.py  audit.py  auth.py  compliance.py  data_residency.py  desensitize.py  encryption.py  guardrails.py  hallucination_detection.py  injection_detection.py  permission.py  pii_detection.py  sso.py  tenant.py  user_store.py
skills/: download_skills.sh
tests/: conftest.py  question.md  questions2.md  test_questions2.py
(+307 files in other folders)
