[project]
name = "multi-agent-office-platform"
version = "0.1.0"
description = "企业级多Agent办公平台"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.4",
    "autogen-ext>=0.4",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
    "openai>=1.0",
    "langfuse>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.40",
    "opentelemetry-instrumentation-httpx>=0.40",
    "opentelemetry-exporter-otlp>=1.20",
    "prometheus-client>=0.20",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*", "api*", "gateway*", "mcp_servers*", "observability*", "security*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
